View etudiant functionality

--- a/src/main/resources/static/addMatiere.html
+++ b/src/main/resources/static/addMatiere.html
@@ -20,11 +20,11 @@
         <form id="addMatiereForm">
             <div class="mb-3">
                 <label for="nomMatiere" class="form-label">Nom de la matière</label>
-                <input type="text" class="form-control" id="nomMatiere" name="nomMatiere" required>
+                <input type="text" class="form-control" id="nomMatiere" name="nom" required>
             </div>
             <div class="mb-3">
                 <label for="uniteEnseignement" class="form-label">Unité d'enseignement</label>
-                <input type="text" class="form-control" id="uniteEnseignement" name="uniteEnseignement" required>
+                <input type="text" class="form-control" id="uniteEnseignement" name="unite" required>
             </div>
 
             <div class="d-flex justify-content-center mt-4">
