Finishing CRUDs on etudiant

--- a/src/main/resources/static/matieres.html
+++ b/src/main/resources/static/matieres.html
@@ -33,9 +33,9 @@
                         <td>Applications reparties</td>
                         <td>Réseaux et Systèmes</td>
                         <td>
-                            <button class="btn btn-outline-primary viewBtn" data-id="${student.id}">View</button>
-                            <button class="btn btn-outline-success updateBtn" data-id="${student.id}">Update</button>
-                            <button class="btn btn-outline-danger deleteBtn" data-id="${student.id}">Delete</button>
+                            <button class="btn btn-outline-primary viewBtn" data-id="${student.id}">Détails</button>
+                            <button class="btn btn-outline-success updateBtn" data-id="${student.id}">Modifier</button>
+                            <button class="btn btn-outline-danger deleteBtn" data-id="${student.id}">Supprimer</button>
                         </td>
                     </tr>
                 </tbody>
