--- a/src/main/resources/static/matiereInfo.html
+++ b/src/main/resources/static/matiereInfo.html
@@ -20,10 +20,10 @@
         <div class="card mb-4">
             <div class="card-body">
                 <h5 class="card-title">Nom de la Matière</h5>
-                <p class="card-text"><strong>Nom:</strong> Mathématiques</p>
+                <p class="card-text"><strong>Nom:</strong> <span id="nomMatiere"></span></p>
                 <hr>
                 <h5 class="card-title">Détails</h5>
-                <p class="card-text"><strong>Unité d'enseignement:</strong> Sciences Fondamentales</p>
+                <p class="card-text"><strong>Unité d'enseignement:</strong> <span id="uniteEnseignement"></span></p>
             </div>
         </div>
 
@@ -39,25 +39,8 @@
                             <th>Note</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr>
-                            <td>Dupont</td>
-                            <td>Jean</td>
-                            <td>123456</td>
-                            <td>16/20</td>
-                        </tr>
-                        <tr>
-                            <td>Martin</td>
-                            <td>Claire</td>
-                            <td>654321</td>
-                            <td>14/20</td>
-                        </tr>
-                        <tr>
-                            <td>Durand</td>
-                            <td>Paul</td>
-                            <td>789012</td>
-                            <td>18/20</td>
-                        </tr>
+                    <tbody id="notesTableBody">
+                        <!-- Rows will be dynamically added here -->
                     </tbody>
                 </table>
             </div>
@@ -65,5 +48,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/matiereInfo.js"></script>
 </body>
 </html>
